--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Reporters and reporting'
+- GITenberg
 title: 'News Writing
 
   The Gathering , Handling and Writing of News Stories'
